[fix](ABC-1316): Input Choice Set - Fixed label horizontal alignment when toggle (#937)

--- a/src/modules/base/inputChoiceSet/inputChoiceSet.css
+++ b/src/modules/base/inputChoiceSet/inputChoiceSet.css
@@ -354,6 +354,10 @@
     line-height: 1;
 }
 
+.avonni-input-choice-set__option-label-icon-container_toggle {
+    padding-top: 0;
+}
+
 .slds-checkbox
     .slds-checkbox__label
     .avonni-input-choice-set__option-label-icon-container.slds-form-element__label,
